# music-hunter

./: .gitignore  README.md  pyproject.toml  settings.json
music_hunter/apps/: discogs_crawler.py
music_hunter/cache/: __init__.py  settings_cache.py
music_hunter/dataclasses/models/: Artist.py
music_hunter/dataclasses/settings/: __init__.py  discogs_settings.py  redis_settings.py
music_hunter/lib/: redis.py
music_hunter/lib/crawlers/: __init__.py  discogs.py
music_hunter/lib/enums/: __init__.py  type_enum.py
music_hunter/models/: Artist.py  Release.py
music_hunter/settings/: __init__.py  settings.py
music_hunter/utils/: patterns.py
